manifest/prod/devops/sonarqube/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarqube-ing
  namespace: sonarqube
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: nginx
  rules:
    - host: sonarqube.ukjjang.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sonarqube-svc
                port:
                  number: 9000
  tls:
    - hosts:
        - sonarqube.ukjjang.me
      secretName: ukjjang-tls
